--- a/html/contacts.html
+++ b/html/contacts.html
@@ -10,20 +10,21 @@
       type="image/x-icon"
     />
     <title>Join | Contacts</title>
-    <link rel="stylesheet" href="../styles/dialog.css">
+    <link rel="stylesheet" href="../styles/dialog.css" />
     <link rel="stylesheet" href="../style.css" />
-    <link rel="stylesheet" href="../styles/contact.css">
-    <link rel="stylesheet" href="../styles/media.css">
+    <link rel="stylesheet" href="../styles/contact.css" />
+    <link rel="stylesheet" href="../styles/media.css" />
     <script src="../script.js"></script>
     <script src="../js/contacts.js"></script>
     <script src="../js/render.js"></script>
+    <script src="../js/templates.js"></script>
     <script type="module">
-      import { loadDataFromLocalStorage } from '../js/firebase.js';
+      import { loadDataFromLocalStorage } from "../js/firebase.js";
       loadDataFromLocalStorage();
     </script>
   </head>
- <body onload='initContacts("contacts", "menu")'>
-    <div id="overlay-placeholder" onclick="closeDialog()"></div>
+  <body onload='initContacts("contacts", "menu")'>
+    <div id="overlay-placeholder" class="overlay-placeholder d-none"></div>
     <div class="container">
       <div>
         <div id="menu-content" class="menu-content"></div>
@@ -33,159 +34,16 @@
         <main class="main contact-main">
           <!-- Hier den Inhalt der Seite einfügen! -->
           <div class="contacts-list">
-            
+            <!-- <div id="alphabet-list-container" class="alphabet-list-container"> -->
 
+            <div
+              onclick="renderAddContact()"
+              class="add-contact-button button-hover-light-blue-background"
+            >
+              <div>Add new contact</div>
+              <div><img src="../assets/img/person_add.svg" alt="" /></div>
+            </div>
             <div id="alphabet-list-container" class="alphabet-list-container">
-
-              <div onclick="addContact()" class="add-contact-button button-hover-light-blue-background">
-                <div>Add new contact</div>
-                <div><img src="../assets/img/person_add.svg" alt=""></div> 
-              </div>
-              
-              <div id="alphabet-list-a" class="alphabet-list d-non">
-                <div class="letter">A</div>
-                <div class="seperation-line-container">
-                  <div class="seperation-line"></div>
-                </div>
-              </div>
-              <div id="alphabet-list-b" class="alphabet-list d-non">
-                <div class="letter">B</div>
-                <div class="seperation-line-container">
-                  <div class="seperation-line"></div>
-                </div>
-              </div>
-              <div id="alphabet-list-c" class="alphabet-list d-non">
-                <div class="letter">C</div>
-                <div class="seperation-line-container">
-                  <div class="seperation-line"></div>
-                </div>
-              </div>
-              <div id="alphabet-list-d" class="alphabet-list d-non">
-                <div class="letter">D</div>
-                <div class="seperation-line-container">
-                  <div class="seperation-line"></div>
-                </div>
-              </div>
-              <div id="alphabet-list-e" class="alphabet-list d-non">
-                <div class="letter">E</div>
-                <div class="seperation-line-container">
-                  <div class="seperation-line"></div>
-                </div>
-              </div>
-              <div id="alphabet-list-f" class="alphabet-list d-non">
-                <div class="letter">F</div>
-                <div class="seperation-line-container">
-                  <div class="seperation-line"></div>
-                </div>
-              </div>
-              <div id="alphabet-list-g" class="alphabet-list d-non">
-                <div class="letter">G</div>
-                <div class="seperation-line-container">
-                  <div class="seperation-line"></div>
-                </div>
-              </div>
-              <div id="alphabet-list-h" class="alphabet-list d-non">
-                <div class="letter">H</div>
-                <div class="seperation-line-container">
-                  <div class="seperation-line"></div>
-                </div>
-              </div>
-              <div id="alphabet-list-i" class="alphabet-list d-non">
-                <div class="letter">I</div>
-                <div class="seperation-line-container">
-                  <div class="seperation-line"></div>
-                </div>
-              </div>
-              <div id="alphabet-list-j" class="alphabet-list d-non">
-                <div class="letter">J</div>
-                <div class="seperation-line-container">
-                  <div class="seperation-line"></div>
-                </div>
-              </div>
-              <div id="alphabet-list-k" class="alphabet-list d-non">
-                <div class="letter">K</div>
-                <div class="seperation-line-container">
-                  <div class="seperation-line"></div>
-                </div>
-              </div>
-              <div id="alphabet-list-l" class="alphabet-list d-non">
-                <div class="letter">L</div>
-                <div class="seperation-line-container">
-                  <div class="seperation-line"></div>
-                </div>
-              </div>
-              <div id="alphabet-list-m" class="alphabet-list d-non">
-                <div class="letter">M</div>
-                <div class="seperation-line-container">
-                  <div class="seperation-line"></div>
-                </div>
-              </div>
-              <div id="alphabet-list-n" class="alphabet-list d-non">
-                <div class="letter">N</div>
-                <div class="seperation-line-container">
-                  <div class="seperation-line"></div>
-                </div>
-              </div>
-              <div id="alphabet-list-o" class="alphabet-list d-non">
-                <div class="letter">O</div>
-                <div class="seperation-line-container">
-                  <div class="seperation-line"></div>
-                </div>
-              </div>
-              <div id="alphabet-list-p" class="alphabet-list d-non">
-                <div class="letter">P</div>
-                <div class="seperation-line-container">
-                  <div class="seperation-line"></div>
-                </div>
-              </div>
-              <div id="alphabet-list-q" class="alphabet-list d-non">
-                <div class="letter">Q</div>
-                <div class="seperation-line-container">
-                  <div class="seperation-line"></div>
-                </div>
-              </div>
-              <div id="alphabet-list-r" class="alphabet-list d-non">
-                <div class="letter">R</div>
-                <div class="seperation-line-container">
-                  <div class="seperation-line"></div>
-                </div>
-              </div>
-              <div id="alphabet-list-s" class="alphabet-list d-non">
-                <div class="letter">S</div>
-                <div class="seperation-line-container">
-                  <div class="seperation-line"></div>
-                </div>
-              </div>
-              <div id="alphabet-list-t" class="alphabet-list d-non">
-                <div class="letter">T</div>
-                <div class="seperation-line-container">
-                  <div class="seperation-line"></div>
-                </div>
-              </div>
-              <div id="alphabet-list-w" class="alphabet-list d-non">
-                <div class="letter">W</div>
-                <div class="seperation-line-container">
-                  <div class="seperation-line"></div>
-                </div>
-              </div>
-              <div id="alphabet-list-x" class="alphabet-list d-non">
-                <div class="letter">X</div>
-                <div class="seperation-line-container">
-                  <div class="seperation-line"></div>
-                </div>
-              </div>
-              <div id="alphabet-list-y" class="alphabet-list d-non">
-                <div class="letter">Y</div>
-                <div class="seperation-line-container">
-                  <div class="seperation-line"></div>
-                </div>
-              </div>
-              <div id="alphabet-list-z" class="alphabet-list d-non">
-                <div class="letter">Z</div>
-                <div class="seperation-line-container">
-                  <div class="seperation-line"></div>
-                </div>
-              </div>
             </div>
           </div>
           <div class="contacts-info">
@@ -194,8 +52,7 @@
               <div class="contacts-seperation-border"></div>
               <div class="contacts-motto">better with a team</div>
             </div>
-            <div id="userInfo" class="user-info-container">
-            </div>
+            <div id="userInfo" class="user-info-container"></div>
           </div>
         </main>
       </div>
