--- a/html/help.html
+++ b/html/help.html
@@ -6,6 +6,7 @@
     <link rel="shortcut icon" href="../assets/img/join-logo.svg" type="image/x-icon" />
     <title>Join | Help</title>
     <link rel="stylesheet" href="../../style.css" />
+    <link rel="stylesheet" href="../styles/media.css">
     <script src="../script.js"></script>
     <script src="../../js/render.js"></script>
   </head>
