contact responsiv update

--- a/html/contacts.html
+++ b/html/contacts.html
@@ -46,11 +46,12 @@
             <div id="alphabet-list-container" class="alphabet-list-container">
             </div>
           </div>
-          <div class="contacts-info">
+          <div id="contacts-info" class="contacts-info">
             <div class="contacts-header-wrap">
               <div class="contacts-header">Contacts</div>
               <div class="contacts-seperation-border"></div>
               <div class="contacts-motto">better with a team</div>
+              <div class="arrow-left-contacts" onclick="toggleClass(document.getElementById('contacts-info'), 'translate-x-100')"><img src="../assets/img/arrow-left.svg" alt=""></div>
             </div>
             <div id="userInfo" class="user-info-container"></div>
           </div>
