--- a/html/sign-up.html
+++ b/html/sign-up.html
@@ -37,11 +37,10 @@
 
       <div class="container-sign-up">
         <div class="sign-up-title">
-          <a onclick="history.back()"
-            ><img src="../assets/img/arrow-left.svg" class="arrow-left-sign-up"
-          /></a>
+          <a href="../index.html">
+            <img src="../assets/img/arrow-left.svg" class="arrow-left-sign-up"/></a>
           <h1>Sign up</h1>
-          <img src="../assets/img/vector-log-in.svg" alt="" />
+          <img src="../assets/img/vector-log-in.svg" class="vector" alt="" />
         </div>
 
         <section class="input-box-sign-up">
