--- a/html/contacts.html
+++ b/html/contacts.html
@@ -32,6 +32,7 @@
       <div class="main-content">
         <header id="header-content" class="header"></header>
         <main class="main contact-main">
+          <div class="overlay-placeholder-mobile d-none"></div>
           <!-- Hier den Inhalt der Seite einfügen! -->
           <div class="contacts-list">
             <!-- <div id="alphabet-list-container" class="alphabet-list-container"> -->
@@ -51,7 +52,7 @@
               <div class="contacts-header">Contacts</div>
               <div class="contacts-seperation-border"></div>
               <div class="contacts-motto">better with a team</div>
-              <div class="arrow-left-contacts" onclick="toggleClass(document.getElementById('contacts-info'), 'translate-x-100')"><img src="../assets/img/arrow-left.svg" alt=""></div>
+              <div class="arrow-left-contacts" onclick="toggleClass(document.getElementById('contacts-info'), 'translate-x-0')"><img src="../assets/img/arrow-left.svg" alt=""></div>
             </div>
             <div id="userInfo" class="user-info-container"></div>
           </div>
