legal privacy responsiv

--- a/html/legal-notice.html
+++ b/html/legal-notice.html
@@ -8,6 +8,7 @@
     <title>Join | Legal Notice</title>
 
     <link rel="stylesheet" href="../../style.css" />
+    <link rel="stylesheet" href="../styles/media.css">
     <script src="../script.js"></script>
     <script src="../../js/render.js"></script>
   </head>
