--- a/html/privacy-policy.html
+++ b/html/privacy-policy.html
@@ -12,6 +12,7 @@
     <title>Join | Privavy Policy</title>
 
     <link rel="stylesheet" href="../../style.css" />
+    <link rel="stylesheet" href="../styles/media.css">
     <script src="../script.js"></script>
     <script src="../../js/render.js"></script>
   </head>
