--- a/html/legal-notice.html
+++ b/html/legal-notice.html
@@ -10,6 +10,17 @@
     <link rel="stylesheet" href="../../style.css" />
     <script src="../script.js"></script>
     <script src="../../js/render.js"></script>
+    <script type="module">
+      import { logout } from "../js/firebase.js";
+      document.addEventListener("DOMContentLoaded", () => {
+        document.body.addEventListener("click", (event) => {
+          const target = event.target;
+          if (target.id === "logoutButton") {
+            logout();
+          }
+        });
+      });
+    </script>
   </head>
   <body
     onload='loadTemplates("legalNotice", "legals")'
