--- a/html/add-task.html
+++ b/html/add-task.html
@@ -21,8 +21,17 @@
     <script src="../js/render.js"></script>
     <!-- <script src="../js/board.js"></script> -->
     <script type="module">
-      import { loadDataFromLocalStorage } from '../js/firebase.js';
+      import { logout } from "../js/firebase.js";
+      import { loadDataFromLocalStorage } from "../js/firebase.js";
       loadDataFromLocalStorage();
+      document.addEventListener("DOMContentLoaded", () => {
+        document.body.addEventListener("click", (event) => {
+          const target = event.target;
+          if (target.id === "logoutButton") {
+            logout();
+          }
+        });
+      });
     </script>
   </head>
   <body onload='initAddTask("addTask", "menu")' class="body-add-task">
