--- a/html/contacts.html
+++ b/html/contacts.html
@@ -19,8 +19,17 @@
     <script src="../js/render.js"></script>
     <script src="../js/templates.js"></script>
     <script type="module">
+      import { logout } from "../js/firebase.js";
       import { loadDataFromLocalStorage } from "../js/firebase.js";
       loadDataFromLocalStorage();
+      document.addEventListener("DOMContentLoaded", () => {
+        document.body.addEventListener("click", (event) => {
+          const target = event.target;
+          if (target.id === "logoutButton") {
+            logout();
+          }
+        });
+      });
     </script>
   </head>
   <body onload='initContacts("contacts", "menu")'>
