--- a/html/summary.html
+++ b/html/summary.html
@@ -3,25 +3,37 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="../assets/img/join-logo.svg" type="image/x-icon"/>
+    <link
+      rel="shortcut icon"
+      href="../assets/img/join-logo.svg"
+      type="image/x-icon"
+    />
     <title>Join | Summary</title>
     <link rel="stylesheet" href="../../style.css" />
     <link rel="stylesheet" href="../../styles/summery.css" />
-    <link rel="stylesheet" href="../styles/media.css">
-    <script src="../script.js" defer>
-    </script>
+    <link rel="stylesheet" href="../styles/media.css" />
+    <script src="../script.js" defer></script>
     <script src="../js/sign-up.js" defer></script>
     <script src="../js/summary.js" defer></script>
     <script src="../js/log-in.js" defer></script>
     <script src="../../js/render.js"></script>
     <script type="module">
-      import { loadDataFromLocalStorage } from '../js/firebase.js';
+      import { logout } from "../js/firebase.js";
+      import { loadDataFromLocalStorage } from "../js/firebase.js";
       loadDataFromLocalStorage();
+      document.addEventListener("DOMContentLoaded", () => {
+        document.body.addEventListener("click", (event) => {
+          const target = event.target;
+          if (target.id === "logoutButton") {
+            logout();
+          }
+        });
+      });
     </script>
   </head>
   <body onload='loadSummary("summary", "menu")'>
     <div class="container">
-      <div>         
+      <div>
         <div id="menu-content" class="menu-content"></div>
       </div>
       <div class="main-content">
@@ -29,9 +41,9 @@
         <main class="main main-summary">
           <div class="title-summary">
             <h1>Join 360</h1>
-            <img src="../assets/img/Vector-summery.svg" class="title-vector"/>
+            <img src="../assets/img/Vector-summery.svg" class="title-vector" />
             <p>Key Metrics at a Glance</p>
-            <img src="../assets/img/vector-log-in.svg" class="mobile-vector">
+            <img src="../assets/img/vector-log-in.svg" class="mobile-vector" />
           </div>
 
           <div class="summary-list">
