bugfix link to legal notes

--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
       </div>
 
       <div class="footer">
-        <p onclick="loadInfoSites('privacy-policy.html')">Privacy Policy</p>
-        <p onclick="loadInfoSites('legal-notice.html')">Legal notice</p>
+        <p onclick="loadInfoSites('./html/privacy-policy.html')">Privacy Policy</p>
+        <p onclick="loadInfoSites('./html/legal-notice.html')">Legal notice</p>
       </div>
     </main>
   </body>
