bugfix on login and sign up

--- a/html/sign-up.html
+++ b/html/sign-up.html
@@ -43,7 +43,7 @@
           <img src="../assets/img/vector-log-in.svg" class="vector" alt="" />
         </div>
 
-        <section class="input-box-sign-up">
+        <form class="input-box-sign-up">
           <div class="input-sign-up">
             <input
               id="addContactName"
@@ -76,6 +76,7 @@
               class="input-field"
               id="passwordInput"
               type="password"
+              autocomplete="off"
               placeholder="Password"
             />
             <img
@@ -92,6 +93,7 @@
               class="input-field"
               id="confirmPasswordInput"
               type="password"
+              autocomplete="off"
               placeholder="Confirm Password"
             />
             <img
@@ -104,7 +106,7 @@
           </div>
 
           <div id="generalError" class="error-message-sign-up"></div>
-        </section>
+        </form>
 
         <section class="remember-forgot-box-signup">
           <div class="remember-me-sign-up">
