responsiv board + other

--- a/html/board.html
+++ b/html/board.html
@@ -70,7 +70,7 @@
                 onclick="renderAddTaskDialog('toDo')"
                 class="board-button-add-task button-hover-light-blue-background"
               >
-                Add task
+                <div>Add task</div>
                 <img src="../assets/img/add-icon.svg" alt="" />
               </button>
             </div>
