--- a/html/contacts.html
+++ b/html/contacts.html
@@ -64,6 +64,7 @@
               <div class="arrow-left-contacts" onclick="toggleClass(document.getElementById('contacts-info'), 'translate-x-0')"><img src="../assets/img/arrow-left.svg" alt=""></div>
             </div>
             <div id="userInfo" class="user-info-container"></div>
+            <div class="menu-contacts" onclick="openContactsMenu(event)"><img src="../assets/img/more_vert.svg" alt=""></div>
           </div>
         </main>
       </div>
