--- a/html/contacts.html
+++ b/html/contacts.html
@@ -43,7 +43,7 @@
         <main class="main contact-main">
           <div class="overlay-placeholder-mobile d-none"></div>
           <!-- Hier den Inhalt der Seite einfügen! -->
-          <div class="contacts-list">
+          <div id="contacts-list" class="contacts-list">
             <!-- <div id="alphabet-list-container" class="alphabet-list-container"> -->
 
             <div
