fixed bugs on sign up form

--- a/html/sign-up.html
+++ b/html/sign-up.html
@@ -50,6 +50,7 @@
               class="input-field"
               type="text"
               placeholder="Name"
+              autocomplete="name"
               required
             />
             <img
@@ -66,6 +67,7 @@
               type="email"
               name="email"
               placeholder="Email"
+              autocomplete="email"
               required
             />
             <img src="../assets/img/mail-form-icon.svg" alt="" />
@@ -116,7 +118,7 @@
               id="rememberMe"
               class="remember-me-input"
             />
-            <label for="remember-me">
+            <label for="rememberMe">
               <h5>
                 I accept the
                 <a onclick="loadInfoSites('privacy-policy.html')">Privacy Policy</a>
