fixed sign up input bug

--- a/html/sign-up.html
+++ b/html/sign-up.html
@@ -38,7 +38,8 @@
       <div class="container-sign-up">
         <div class="sign-up-title">
           <a href="../index.html">
-            <img src="../assets/img/arrow-left.svg" class="arrow-left-sign-up"/></a>
+            <img src="../assets/img/arrow-left.svg" class="arrow-left-sign-up"
+          /></a>
           <h1>Sign up</h1>
           <img src="../assets/img/vector-log-in.svg" class="vector" alt="" />
         </div>
@@ -121,14 +122,16 @@
             <label for="rememberMe">
               <h5>
                 I accept the
-                <a onclick="loadInfoSites('privacy-policy.html')">Privacy Policy</a>
+                <a onclick="loadInfoSites('privacy-policy.html')"
+                  >Privacy Policy</a
+                >
               </h5>
             </label>
           </div>
         </section>
 
         <div class="end-sign-up">
-          <button class="btn-sign-up" id="signUpBtn">Sign up</button>
+          <button class="btn-sign-up" id="signUpBtn" disabled>Sign up</button>
         </div>
       </div>
       <div class="success-message d-none" id="successMessage">
