fixed bug on login

--- a/html/sign-up.html
+++ b/html/sign-up.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="../styles/sign-up.css" />
     <link rel="stylesheet" href="../styles/log-in.css" />
     <script src="../js/sign-up.js" defer></script>
-    <script src="../js/summary.js" defer></script>
+    <!-- <script src="../js/summary.js" defer></script> -->
     <script src="../js/log-in.js" defer></script>
     <script type="module">
       import { handleSignUp } from "../js/firebase.js";
