--- a/html/sign-up.html
+++ b/html/sign-up.html
@@ -10,9 +10,10 @@
     />
     <link rel="stylesheet" href="../styles/sign-up.css" />
     <link rel="stylesheet" href="../styles/log-in.css" />
+    <script src="../script.js"></script>
     <script src="../js/sign-up.js" defer></script>
-    <!-- <script src="../js/summary.js" defer></script> -->
-    <script src="../js/log-in.js" defer></script>
+    <script src="../js/render.js"></script>
+    <!-- <script src="../js/log-in.js" defer></script> -->
     <script type="module">
       import { handleSignUp } from "../js/firebase.js";
       // Sicherstellen, dass das DOM geladen ist
