--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     />
     <script src="./js/log-in.js" defer></script>
     <script src="./js/summary.js" defer></script>
+    <script src="./js/render.js"></script>
     <script src="./script.js" defer></script>
     <script type="module">
       import { login } from "./js/firebase.js";
@@ -79,7 +80,6 @@
               src="./assets/img/password-log-in.svg"
               class="password-img"
               id="checkInPassword"
-              onclick="checkPasswordImage()"
               alt=""
             />
           </div>
