--- a/html/summary.html
+++ b/html/summary.html
@@ -15,7 +15,7 @@
     <script src="../script.js" defer></script>
     <!-- <script src="../js/sign-up.js" defer></script> -->
     <script src="../js/summary.js" defer></script>
-    <script src="../js/log-in.js" defer></script>
+    <!-- <script src="../js/log-in.js" defer></script> -->
     <script src="../../js/render.js"></script>
     <script type="module">
       import { logout } from "../js/firebase.js";
