--- a/html/summary.html
+++ b/html/summary.html
@@ -9,12 +9,12 @@
       type="image/x-icon"
     />
     <title>Join | Summary</title>
-    <link rel="stylesheet" href="../../style.css" />
-    <link rel="stylesheet" href="../../styles/summery.css" />
+    <link rel="stylesheet" href="../style.css" />
+    <link rel="stylesheet" href="../styles/summery.css" />
     <link rel="stylesheet" href="../styles/media.css" />
     <script src="../script.js" defer></script>
     <script src="../js/summary.js" defer></script>
-    <script src="../../js/render.js"></script>
+    <script src="../js/render.js"></script>
     <script type="module">
       import { logout } from "../js/firebase.js";
       import { loadDataFromLocalStorage } from "../js/firebase.js";
