--- a/html/help.html
+++ b/html/help.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="../assets/img/join-logo.svg" type="image/x-icon" />
     <title>Join | Help</title>
-    <link rel="stylesheet" href="../../style.css" />
+    <link rel="stylesheet" href="../style.css" />
     <link rel="stylesheet" href="../styles/media.css">
     <script src="../script.js"></script>
-    <script src="../../js/render.js"></script>
+    <script src="../js/render.js"></script>
     <script type="module">
       import { logout } from "../js/firebase.js";
       document.addEventListener("DOMContentLoaded", () => {
