--- a/html/privacy-policy.html
+++ b/html/privacy-policy.html
@@ -11,10 +11,10 @@
     />
     <title>Join | Privavy Policy</title>
 
-    <link rel="stylesheet" href="../../style.css" />
+    <link rel="stylesheet" href="../style.css" />
     <link rel="stylesheet" href="../styles/media.css">
     <script src="../script.js"></script>
-    <script src="../../js/render.js"></script>
+    <script src="../js/render.js"></script>
     <script type="module">
       import { logout } from "../js/firebase.js";
       document.addEventListener("DOMContentLoaded", () => {
