--- a/html/add-task.html
+++ b/html/add-task.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="../styles/media.css">
     <script src="../js/contacts.js"></script>
     <script src="../js/add-task.js"></script>
-    <script src="../js/add-task-2"></script>
+    <script src="../js/add-task-2.js"></script>
     <script src="../script.js"></script>
     <script src="../js/render.js"></script>
     <!-- <script src="../js/board.js"></script> -->
