--- a/html/board.html
+++ b/html/board.html
@@ -24,7 +24,7 @@
     <script src="../js/render.js"></script>
     <script src="../js/templates.js"></script>
     <script src="../js/add-task.js"></script>
-    <script src="../js/add-task-2"></script>
+    <script src="../js/add-task-2.js"></script>
     <script type="module">
       import { logout } from "../js/firebase.js";
       import { loadDataFromLocalStorage } from "../js/firebase.js";
