cleaned up code

--- a/html/summary.html
+++ b/html/summary.html
@@ -10,7 +10,7 @@
     />
     <title>Join | Summary</title>
     <link rel="stylesheet" href="../style.css" />
-    <link rel="stylesheet" href="../styles/summery.css" />
+    <link rel="stylesheet" href="../styles/summary.css" />
     <link rel="stylesheet" href="../styles/media.css" />
     <script src="../script.js" defer></script>
     <script src="../js/summary.js" defer></script>
