--- a/html/add-task.html
+++ b/html/add-task.html
@@ -18,6 +18,7 @@
     <script src="../js/contacts.js"></script>
     <script src="../js/add-task.js"></script>
     <script src="../js/add-task-2.js"></script>
+    <script src="../js/render-tasks.js"></script>
     <script src="../script.js"></script>
     <script src="../js/render.js"></script>
     <!-- <script src="../js/board.js"></script> -->
