--- a/html/board.html
+++ b/html/board.html
@@ -22,6 +22,7 @@
     <script src="../script.js"></script>
     <script src="../js/board.js"></script>
     <script src="../js/render.js"></script>
+    <script src="../js/render-tasks.js"></script>
     <script src="../js/templates.js"></script>
     <script src="../js/add-task.js"></script>
     <script src="../js/add-task-2.js"></script>
