--- a/html/contacts.html
+++ b/html/contacts.html
@@ -17,6 +17,7 @@
     <script src="../script.js"></script>
     <script src="../js/contacts.js"></script>
     <script src="../js/render.js"></script>
+    <script src="../js/render-contacts.js"></script>
     <script src="../js/templates.js"></script>
     <script type="module">
       import { logout } from "../js/firebase.js";
