--- a/html/board.html
+++ b/html/board.html
@@ -23,7 +23,8 @@
     <script src="../js/board.js"></script>
     <script src="../js/render.js"></script>
     <script src="../js/render-tasks.js"></script>
-    <script src="../js/templates.js"></script>
+    <script src="../js/templates-board.js"></script>
+    <script src="../js/templates-add-task.js"></script>
     <script src="../js/add-task.js"></script>
     <script src="../js/add-task-2.js"></script>
     <script type="module">
