--- a/html/contacts.html
+++ b/html/contacts.html
@@ -18,7 +18,7 @@
     <script src="../js/contacts.js"></script>
     <script src="../js/render.js"></script>
     <script src="../js/render-contacts.js"></script>
-    <script src="../js/templates.js"></script>
+    <script src="../js/templates-contacts.js"></script>
     <script type="module">
       import { logout } from "../js/firebase.js";
       import { loadDataFromLocalStorage } from "../js/firebase.js";
