firebase.js splitted

--- a/html/add-task.html
+++ b/html/add-task.html
@@ -21,10 +21,9 @@
     <script src="../js/render-tasks.js"></script>
     <script src="../script.js"></script>
     <script src="../js/render.js"></script>
-    <!-- <script src="../js/board.js"></script> -->
     <script type="module">
       import { logout } from "../js/firebase.js";
-      import { loadDataFromLocalStorage } from "../js/firebase.js";
+      import { loadDataFromLocalStorage } from "../js/firebase-helper.js";
       loadDataFromLocalStorage();
       document.addEventListener("DOMContentLoaded", () => {
         document.body.addEventListener("click", (event) => {
