--- a/html/contacts.html
+++ b/html/contacts.html
@@ -21,7 +21,7 @@
     <script src="../js/templates-contacts.js"></script>
     <script type="module">
       import { logout } from "../js/firebase.js";
-      import { loadDataFromLocalStorage } from "../js/firebase.js";
+      import { loadDataFromLocalStorage } from "../js/firebase-helper.js";
       loadDataFromLocalStorage();
       document.addEventListener("DOMContentLoaded", () => {
         document.body.addEventListener("click", (event) => {
