--- a/html/summary.html
+++ b/html/summary.html
@@ -17,7 +17,7 @@
     <script src="../js/render.js"></script>
     <script type="module">
       import { logout } from "../js/firebase.js";
-      import { loadDataFromLocalStorage } from "../js/firebase.js";
+      import { loadDataFromLocalStorage } from "../js/firebase-helper.js";
       loadDataFromLocalStorage();
       document.addEventListener("DOMContentLoaded", () => {
         document.body.addEventListener("click", (event) => {
