--- a/html/add-task.html
+++ b/html/add-task.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="../style.css" />
     <link rel="stylesheet" href="../styles/add-task.css" />
     <link rel="stylesheet" href="../styles/contact.css" />
-    <link rel="stylesheet" href="../styles/media.css">
+    <link rel="stylesheet" href="../styles/media.css" />
     <script src="../js/contacts.js"></script>
     <script src="../js/add-task.js"></script>
     <script src="../js/add-task-2.js"></script>
@@ -44,8 +44,6 @@
         <header id="header-content" class="header"></header>
         <main id="main-add-task" class="main main-add-task">
           <!-- Hier den Inhalt der Seite einfügen! -->
-          
-          
         </main>
       </div>
       <div class="task-added-container" id="task-added-container">
@@ -53,7 +51,5 @@
         <img src="../assets/img/added-task.svg" alt="" />
       </div>
     </div>
-
-   
   </body>
 </html>
