fixed contact higlighting

--- a/html/contacts.html
+++ b/html/contacts.html
@@ -62,7 +62,7 @@
               <div class="contacts-header">Contacts</div>
               <div class="contacts-seperation-border"></div>
               <div class="contacts-motto">better with a team</div>
-              <div class="arrow-left-contacts" onclick="toggleClass(document.getElementById('contacts-info'), 'translate-x-0')"><img src="../assets/img/arrow-left.svg" alt=""></div>
+              <div class="arrow-left-contacts" onclick="toggleClass(document.getElementById('contacts-info'), 'translate-x-0'), resetContactHighlights()"><img src="../assets/img/arrow-left.svg" alt=""></div>
             </div>
             <div id="userInfo" class="user-info-container"></div>
             <div class="menu-contacts" onclick="openContactsMenu(event)"><img src="../assets/img/more_vert.svg" alt=""></div>
