--- a/html/board.html
+++ b/html/board.html
@@ -26,7 +26,7 @@
     <script src="../js/templates-board.js"></script>
     <script src="../js/templates-add-task.js"></script>
     <script src="../js/add-task.js"></script>
-    <script src="../js/add-task-2.js"></script>
+    <script src="../js/add-task-subfunctions.js"></script>
     <script type="module">
       import { logout } from "../js/firebase.js";
       import { loadDataFromLocalStorage } from "../js/firebase-helper.js";
