finished move button on board tasks

--- a/html/board.html
+++ b/html/board.html
@@ -83,7 +83,10 @@
             <div class="board-list">
               <div class="board-list-header">
                 <span>To do</span>
-                <button class="btn-board-add-task" onclick="renderAddTaskDialog('toDo')">
+                <button
+                  class="btn-board-add-task"
+                  onclick="renderAddTaskDialog('toDo')"
+                >
                   <svg
                     width="10"
                     height="11"
@@ -212,7 +215,5 @@
         <img src="../assets/img/added-task.svg" alt="" />
       </div>
     </div>
-
-    
   </body>
 </html>
