--- a/js/test.html
+++ b/js/test.html
@@ -1,17 +1,11 @@
 <div class="dialog-move-task" id="dialogMoveTask">
   <h3>Move task to:</h3>
   <div class="btn-container">
-    <button id="btnTodo" class="btn-move">
-      To do
-    </button>
-    <button id="btnInProgress" class="btn-move">
-      In progress
-    </button>
-    <button id="btnAwaitFeedback" class="btn-move">
-      Await feedback
-    </button>
-    <button id="btnDone" class="btn-move">
-      Done
-    </button>
+    <button id="btnTodo" class="btn-move">To do</button>
+    <button id="btnInProgress" class="btn-move">In progress</button>
+    <button id="btnAwaitFeedback" class="btn-move">Await feedback</button>
+    <button id="btnDone" class="btn-move">Done</button>
   </div>
 </div>
+
+
